before class deletion

--- a/EagleEatsFinal/appsettings.json
+++ b/EagleEatsFinal/appsettings.json
@@ -1,6 +1,9 @@
 {
+  "UserRegistration": {
+    "UserRegistrationKey": "requiredkey"
+  },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-EagleEatsFinal-BCC99E98-CA15-4E4E-99C2-5D1E1F6ADE66;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=freetwilioappserverquaid.mysql.database.azure.com;UserID = quidax;Password=St33lballrun;Database=eagle_eats_db;SslCa=%CONTENTROOTPATH%DigiCertGlobalRootCA.crt.pem;"
   },
   "Logging": {
     "LogLevel": {
