--- a/EagleEatsFinal/appsettings.json
+++ b/EagleEatsFinal/appsettings.json
@@ -5,6 +5,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=freetwilioappserverquaid.mysql.database.azure.com;UserID = quidax;Password=St33lballrun;Database=eagle_eats_db;SslCa=%CONTENTROOTPATH%DigiCertGlobalRootCA.crt.pem;"
   },
+  "ApiKeys": {
+    "SP": "f79c7ab2a03b1ffc7189b74256c8435e"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
